Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-5093

Augment and fix crash in slow log

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 7.1.0
    • Core
    • None

    Description

      While tracking down a performance problem in HTTP/2, added some values to the slow log entry. Also rearranged the call to avoid a use-after-free crash calling update_stats HttpSM::kill_this().

      Attachments

        Issue Links

          Activity

            People

              shinrich Susan Hinrichs
              shinrich Susan Hinrichs
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m