TS-5093: Augment and fix crash in slow log